# rust-redis

./: .dockerignore  .gitignore  Dockerfile  README.md  RELEASING.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: gen-icons.mjs
src/: App.tsx  api.ts  dialogs.ts  json.ts  store.ts  styles.css  types.ts  useResource.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  models.rs  redis_client.rs  ssh_tunnel.rs  state.rs  store.rs
src/components/: Cli.tsx  ClusterView.tsx  ConnectionForm.tsx  ConnectionsView.tsx  JsonView.tsx  KeyList.tsx  KeyView.tsx  NewKeyModal.tsx  PromptModal.tsx  PubSub.tsx  RefreshControl.tsx  ServerInfo.tsx  SlowLog.tsx  TypeBadge.tsx
